# tgTaskManager

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/bot_service/: __main__.py  handler.py  logger.py
app/bot_service/config/: labels.py  messages.py
app/bot_service/middlewares/: logging.py
app/bot_service/services/: task_service.py
app/bot_service/utils/: formaters.py  keyboards.py  labels.py  messages.py
bot_service/: .env.template  __main__.py  handler.py  logger.py  pyproject.toml
bot_service/config/: keyboards.py  labels.py  messages.py  states.py
bot_service/middlewares/: logging.py
bot_service/services/: notification_service.py  rabbitmq.py  task_service.py  utils.py
bot_service/utils/: formaters.py  keyboards.py
docker/: bot_service.Dockerfile  notification_service.Dockerfile  rabbitmq.Dockerfile  task_service.Dockerfile
notification_service/: .env.template  __main__.py  logger.py  notification_processor.py
notification_service/services/: bot_service.py  storage.py  task_service.py
task_scheduler_service/: __main__.py
task_scheduler_service/processor/: message_processor.py  requests_processor.py
task_service/: .env.template  __main__.py  logger.py  requests_processor.py
task_service/processor/: message_processor.py  requests_processor.py
task_service/services/: bot_service.py  notification_service.py
