[tool.poetry]
name = "tgbotdeadliner"
version = "0.1.0"
description = ""
authors = ["GithubDenis5 <gromacihindenis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.1.1"
isort = "^6.0.0"
black = "^25.1.0"
pre-commit = "^4.1.0"
aiogram = "^3.17.0"
aio-pika = "^9.5.4"
pika = "^1.3.2"
pymongo = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"